Temp commit to test Percy.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
@@ -404,7 +404,7 @@
               <a href="https://twitter.com/swiftpackages">Twitter</a>
             </li>
           </ul>
-          <small>The Swift Package Index is entirely funded by community sponsorship. Thank you to 
+          <small>The Swift Package Index is not funded by community sponsorship. Thank you to 
             <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server#funding-and-sponsorship">all our sponsors for their generosity</a>.
           </small>
         </nav>
