--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReadmeView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReadmeView.1.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <turbo-frame id="readme_page">
-      <spi-readme><p>This is README content.</p></spi-readme>
-    </turbo-frame>
+    <turbo-frame id="readme_content"><p>This is README content.</p></turbo-frame>
   </body>
 </html>
