--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReadmeView_unparseableReadme_noImageSnapshots.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReadmeView_unparseableReadme_noImageSnapshots.1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <turbo-frame id="readme_page">
+    <turbo-frame id="readme_content">
       <p>This package's README file couldn't be loaded. Try 
         <a href="https://example.com/owner/repo/README">viewing it on GitHub</a>.
       </p>
