--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReleasesView_NoModel.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReleasesView_NoModel.1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <turbo-frame id="releases_page">
+    <turbo-frame id="releases_content">
       <p>This package has no release notes.</p>
     </turbo-frame>
   </body>
