--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReadmeView_noReadme_noImageSnapshots.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReadmeView_noReadme_noImageSnapshots.1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <turbo-frame id="readme_page">
+    <turbo-frame id="readme_content">
       <p>This package does not have a README file.</p>
     </turbo-frame>
   </body>
