--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReleasesView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageReleasesView.1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <turbo-frame id="releases_page">
+    <turbo-frame id="releases_content">
       <a href="https://github.com/Sherlouk/swift-snapshot-testing-stitch/releases/tag/1.0.0">
         <h2>v1.0.0</h2>
       </a>
