--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView.1.html
@@ -279,6 +279,9 @@
                     </p>
                   </div>
                 </li>
+                <li>
+                  <a href="https://swiftpackageindex.com/">View Homepage</a>
+                </li>
               </ul>
             </section>
             <hr class="minor"/>
