Slight tweak to button text.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView.1.html
@@ -280,7 +280,7 @@
                   </div>
                 </li>
                 <li>
-                  <a href="https://swiftpackageindex.com/">View Homepage</a>
+                  <a href="https://swiftpackageindex.com/">Package Homepage</a>
                 </li>
               </ul>
             </section>
