--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -50,8 +50,8 @@
         </nav>
       </div>
     </header>
-    <p class="announcement">Russia’s invasion of Ukraine is appalling. 
-      <a href="https://blog.swiftpackageindex.com/posts/we-support-ukraine/">We support Ukraine</a>. 🇺🇦
+    <p class="announcement">Join us in celebrating 
+      <a href="https://blog.swiftpackageindex.com/posts/two-years-of-the-swift-package-index/">two years of the Swift Package Index</a>! 🎂
     </p>
     <section class="search home">
       <div class="inner">
