--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_with_multiple_documentation_links.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_with_multiple_documentation_links.1.html
@@ -284,10 +284,10 @@
             <h6>Documentation</h6>
             <ul>
               <li>
-                <a href="/Alamo/Alamofire/main/documentation/target1">Target1</a>
+                <a href="/Alamo/Alamofire/main/documentation/target1" data-turbo="false">Target1</a>
               </li>
               <li>
-                <a href="/Alamo/Alamofire/main/documentation/target2">Target2</a>
+                <a href="/Alamo/Alamofire/main/documentation/target2" data-turbo="false">Target2</a>
               </li>
             </ul>
             <hr class="minor"/>
