--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_with_single_documentation_link.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_with_single_documentation_link.1.html
@@ -279,14 +279,11 @@
                     </p>
                   </div>
                 </li>
+                <li>
+                  <a href="/Alamo/Alamofire/main/documentation/target" data-turbo="false">Documentation</a>
+                </li>
               </ul>
             </section>
-            <h6>Documentation</h6>
-            <ul>
-              <li>
-                <a href="/Alamo/Alamofire/main/documentation/target1" data-turbo="false">Target1</a>
-              </li>
-            </ul>
             <hr class="minor"/>
             <section class="sidebar_versions">
               <h3>Versions</h3>
