Corrected naming of old snapshot test.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate.1.html
@@ -10,7 +10,7 @@
  </head> 
  <body>
   <header class="spi">
-   <div class="inner">
+   <div class="inner branding_and_menu">
     <a href="/"><h1><img src="/images/logo.svg" alt="Swift Package Index Logo">Swift Package Index</h1></a>
     <nav class="menu">
      <ul>
@@ -20,7 +20,9 @@
       <li><a href="/search">Package Search</a></li>
      </ul>
     </nav>
-    <nav class="breadcrumbs">
+   </div>
+   <div class="inner breadcrumbs">
+    <nav>
      <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/owner">Owner Name</a></li>
