--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleTargets.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_DocCTemplate_multipleTargets.1.html
@@ -31,14 +31,16 @@
      </ul>
     </nav>
    </div>
-   <div class="inner targets">
-    <nav>
-     <ul>
-      <li>Documentation for:</li>
-      <li><a href="/owner/package/main/documentation/target1">Target1</a></li>
-      <li><a href="/owner/package/main/documentation/target2">Target2</a></li>
-     </ul>
-    </nav>
+   <div class="targets_wrap">
+    <div class="inner targets">
+     <nav>
+      <ul>
+       <li>Documentation for:</li>
+       <li><a href="/owner/package/main/documentation/target1">Target1</a></li>
+       <li><a href="/owner/package/main/documentation/target2">Target2</a></li>
+      </ul>
+     </nav>
+    </div>
    </div>
   </header> 
   <p>This is DocC content.</p>   
