--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ErrorPageView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ErrorPageView.1.html
@@ -68,8 +68,8 @@
         </nav>
       </div>
     </header>
-    <p class="announcement">Join us in celebrating 
-      <a href="https://blog.swiftpackageindex.com/posts/two-years-of-the-swift-package-index/">two years of the Swift Package Index</a>! 🎂
+    <p class="announcement">Do you maintain a package with DocC-compatible documentation? 
+      <a href="https://blog.swiftpackageindex.com/posts/auto-generating-auto-hosting-and-auto-updating-docc-documentation/">Let us build and host your docs</a>! 📚
     </p>
     <main>
       <div class="inner">
