--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_single_row_tables.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_single_row_tables.1.html
@@ -145,6 +145,7 @@
                 <li class="stars">17 stars</li>
                 <li class="libraries">3 libraries</li>
                 <li class="executables">1 executable</li>
+                <li class="plugins">No plugins</li>
               </ul>
             </section>
             <hr class="minor"/>
