Typo in the snapshorts.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -153,13 +153,13 @@
             <a href="https://example.com/sponsored/link">
               <div class="ccta">
                 <img alt="Sample Sponsor logo" src="/images/logo.svg"/>
-                <p>Sponsored tells everyone about the thing that you can use to do another thing you need to do! 
+                <p>Sponsored links tell everyone about a thing that you can use to do another thing you need to do! 
                   <span>Learn More</span>.
                 </p>
               </div>
             </a>
-            <small>Thanks so much to all of our generous supporters 
-              <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/blob/main/README.md#funding-and-sponsorship">sponsoring this project</a>.
+            <small>Thanks so much to all of our generous sponsors for 
+              <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/blob/main/README.md#funding-and-sponsorship">supporting this project</a>.
             </small>
           </section>
         </section>
