Add keyword counts
- Introduce WeighedKeyword model.
- Add migration introducing `weighted_keywords` display.
- Add migration for weighted_keywords to database migration config.
- Refresh materialized view for keyword_weights.
- Get some nice numbers to display counts up to 5 positions.
- Format numbers with a nice "k" shorthand.
- Add CSS for keyword counts.
- Fix unit tests.
- Note, if a repository has no keywords, we don't even need to go to the database to try and fetch counts for those keywords.
- Use default string interpolation for `kiloPostfixedQuantity`.

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
@@ -150,31 +150,49 @@
                   <div data-controller="overflowing-list" data-overflowing-list-overflow-message-value="Show all 9 tags…" data-overflowing-list-overflow-height-value="52" data-overflowing-list-collapsed-value="true" data-action="turbo:load@document->overflowing-list#addShowMoreLinkIfNeeded">
                     <ul data-overflowing-list-target="list" class="keywords">
                       <li>
-                        <a href="/keywords/tag1">tag1</a>
+                        <a href="/keywords/tag1">tag1
+                          <span class="keyword-count">1</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag2">tag2</a>
+                        <a href="/keywords/tag2">tag2
+                          <span class="keyword-count">10</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag3">tag3</a>
+                        <a href="/keywords/tag3">tag3
+                          <span class="keyword-count">100</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag4">tag4</a>
+                        <a href="/keywords/tag4">tag4
+                          <span class="keyword-count">1.0k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag5">tag5</a>
+                        <a href="/keywords/tag5">tag5
+                          <span class="keyword-count">1.2k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag6">tag6</a>
+                        <a href="/keywords/tag6">tag6
+                          <span class="keyword-count">1.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag7">tag7</a>
+                        <a href="/keywords/tag7">tag7
+                          <span class="keyword-count">12.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag8">tag8</a>
+                        <a href="/keywords/tag8">tag8
+                          <span class="keyword-count">123.5k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag9">tag9</a>
+                        <a href="/keywords/tag9">tag9
+                          <span class="keyword-count">1234.6k</span>
+                        </a>
                       </li>
                     </ul>
                   </div>
