--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_many_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_many_keywords.1.html
@@ -150,124 +150,204 @@
                   <div data-controller="overflowing-list" data-overflowing-list-overflow-message-value="Show all 40 tags…" data-overflowing-list-overflow-height-value="52" data-overflowing-list-collapsed-value="true" data-action="turbo:load@document->overflowing-list#addShowMoreLinkIfNeeded">
                     <ul data-overflowing-list-target="list" class="keywords">
                       <li>
-                        <a href="/keywords/tag1">tag1</a>
+                        <a href="/keywords/tag1">tag1
+                          <span class="keyword-count">1</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag2">tag2</a>
+                        <a href="/keywords/tag2">tag2
+                          <span class="keyword-count">10</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag3">tag3</a>
+                        <a href="/keywords/tag3">tag3
+                          <span class="keyword-count">100</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag4">tag4</a>
+                        <a href="/keywords/tag4">tag4
+                          <span class="keyword-count">1.0k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag5">tag5</a>
+                        <a href="/keywords/tag5">tag5
+                          <span class="keyword-count">1.2k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag6">tag6</a>
+                        <a href="/keywords/tag6">tag6
+                          <span class="keyword-count">1.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag7">tag7</a>
+                        <a href="/keywords/tag7">tag7
+                          <span class="keyword-count">1.2k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag8">tag8</a>
+                        <a href="/keywords/tag8">tag8
+                          <span class="keyword-count">1.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag9">tag9</a>
+                        <a href="/keywords/tag9">tag9
+                          <span class="keyword-count">12.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag10">tag10</a>
+                        <a href="/keywords/tag10">tag10
+                          <span class="keyword-count">123.5k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag11">tag11</a>
+                        <a href="/keywords/tag11">tag11
+                          <span class="keyword-count">1234.6k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag12">tag12</a>
+                        <a href="/keywords/tag12">tag12
+                          <span class="keyword-count">7654.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag13">tag13</a>
+                        <a href="/keywords/tag13">tag13
+                          <span class="keyword-count">8765.4k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag14">tag14</a>
+                        <a href="/keywords/tag14">tag14
+                          <span class="keyword-count">1.1k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag15">tag15</a>
+                        <a href="/keywords/tag15">tag15
+                          <span class="keyword-count">2.2k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag16">tag16</a>
+                        <a href="/keywords/tag16">tag16
+                          <span class="keyword-count">3.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag17">tag17</a>
+                        <a href="/keywords/tag17">tag17
+                          <span class="keyword-count">4.4k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag18">tag18</a>
+                        <a href="/keywords/tag18">tag18
+                          <span class="keyword-count">5.5k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag19">tag19</a>
+                        <a href="/keywords/tag19">tag19
+                          <span class="keyword-count">6.6k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag20">tag20</a>
+                        <a href="/keywords/tag20">tag20
+                          <span class="keyword-count">7.7k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag21">tag21</a>
+                        <a href="/keywords/tag21">tag21
+                          <span class="keyword-count">8.8k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag22">tag22</a>
+                        <a href="/keywords/tag22">tag22
+                          <span class="keyword-count">9.9k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag23">tag23</a>
+                        <a href="/keywords/tag23">tag23
+                          <span class="keyword-count">1.1k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag24">tag24</a>
+                        <a href="/keywords/tag24">tag24
+                          <span class="keyword-count">1.2k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag25">tag25</a>
+                        <a href="/keywords/tag25">tag25
+                          <span class="keyword-count">2.2k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag26">tag26</a>
+                        <a href="/keywords/tag26">tag26
+                          <span class="keyword-count">2.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag27">tag27</a>
+                        <a href="/keywords/tag27">tag27
+                          <span class="keyword-count">3.3k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag28">tag28</a>
+                        <a href="/keywords/tag28">tag28
+                          <span class="keyword-count">3.4k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag29">tag29</a>
+                        <a href="/keywords/tag29">tag29
+                          <span class="keyword-count">4.4k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag30">tag30</a>
+                        <a href="/keywords/tag30">tag30
+                          <span class="keyword-count">4.5k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag31">tag31</a>
+                        <a href="/keywords/tag31">tag31
+                          <span class="keyword-count">5.5k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag32">tag32</a>
+                        <a href="/keywords/tag32">tag32
+                          <span class="keyword-count">5.6k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag33">tag33</a>
+                        <a href="/keywords/tag33">tag33
+                          <span class="keyword-count">6.6k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag34">tag34</a>
+                        <a href="/keywords/tag34">tag34
+                          <span class="keyword-count">6.7k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag35">tag35</a>
+                        <a href="/keywords/tag35">tag35
+                          <span class="keyword-count">7.7k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag36">tag36</a>
+                        <a href="/keywords/tag36">tag36
+                          <span class="keyword-count">7.8k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag37">tag37</a>
+                        <a href="/keywords/tag37">tag37
+                          <span class="keyword-count">8.8k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag38">tag38</a>
+                        <a href="/keywords/tag38">tag38
+                          <span class="keyword-count">8.9k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag39">tag39</a>
+                        <a href="/keywords/tag39">tag39
+                          <span class="keyword-count">9.9k</span>
+                        </a>
                       </li>
                       <li>
-                        <a href="/keywords/tag40">tag40</a>
+                        <a href="/keywords/tag40">tag40
+                          <span class="keyword-count">10.0k</span>
+                        </a>
                       </li>
                     </ul>
                   </div>
