--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -68,77 +68,91 @@
     <main>
       <div class="inner">
         <section class="two_column">
-          <section class="recent">
-            <div class="recent_packages">
-              <h3>Recently Added</h3>
-              <ul>
-                <li>
-                  <a href="https://example.com/package">Package</a>
-                  <small>Added 2 hours ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package</a>
-                  <small>Added 2 hours ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package</a>
-                  <small>Added 2 hours ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package</a>
-                  <small>Added 2 hours ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package</a>
-                  <small>Added 2 hours ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package</a>
-                  <small>Added 2 hours ago</small>
-                </li>
-              </ul>
-            </div>
-            <div class="recent_releases">
-              <h3>Recent Releases</h3>
-              <ul>
-                <li>
-                  <a href="https://example.com/package">Package 
-                    <small>1.0.0</small>
-                  </a>
-                  <small>Released 20 minutes ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package 
-                    <small>1.0.0</small>
-                  </a>
-                  <small>Released 20 minutes ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package 
-                    <small>1.0.0</small>
-                  </a>
-                  <small>Released 20 minutes ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package 
-                    <small>1.0.0</small>
-                  </a>
-                  <small>Released 20 minutes ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package 
-                    <small>1.0.0</small>
-                  </a>
-                  <small>Released 20 minutes ago</small>
-                </li>
-                <li>
-                  <a href="https://example.com/package">Package 
-                    <small>1.0.0</small>
-                  </a>
-                  <small>Released 20 minutes ago</small>
-                </li>
-              </ul>
-            </div>
+          <section>
+            <section class="twitter_spaces">
+              <p>Join us for our 
+                <a href="https://example.com/next/twitter/space/">next Twitter Space</a> discussing new and updated packages. Or catch up by listening to 
+                <a href="https://example.com/previous/twitter/space/">our most recent episode</a>.
+              </p>
+              <p class="twitter_profile">
+                <small>Follow along at 
+                  <a href="https://twitter.com/SwiftPackages">@SwiftPackages</a>
+                </small>
+              </p>
+            </section>
+            <hr class="minor"/>
+            <section class="recent">
+              <div class="recent_packages">
+                <h3>Recently Added</h3>
+                <ul>
+                  <li>
+                    <a href="https://example.com/package">Package</a>
+                    <small>Added 2 hours ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package</a>
+                    <small>Added 2 hours ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package</a>
+                    <small>Added 2 hours ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package</a>
+                    <small>Added 2 hours ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package</a>
+                    <small>Added 2 hours ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package</a>
+                    <small>Added 2 hours ago</small>
+                  </li>
+                </ul>
+              </div>
+              <div class="recent_releases">
+                <h3>Recent Releases</h3>
+                <ul>
+                  <li>
+                    <a href="https://example.com/package">Package 
+                      <small>1.0.0</small>
+                    </a>
+                    <small>Released 20 minutes ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package 
+                      <small>1.0.0</small>
+                    </a>
+                    <small>Released 20 minutes ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package 
+                      <small>1.0.0</small>
+                    </a>
+                    <small>Released 20 minutes ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package 
+                      <small>1.0.0</small>
+                    </a>
+                    <small>Released 20 minutes ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package 
+                      <small>1.0.0</small>
+                    </a>
+                    <small>Released 20 minutes ago</small>
+                  </li>
+                  <li>
+                    <a href="https://example.com/package">Package 
+                      <small>1.0.0</small>
+                    </a>
+                    <small>Released 20 minutes ago</small>
+                  </li>
+                </ul>
+              </div>
+            </section>
           </section>
           <section>
             <div class="scta">
