--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_HomeIndexView.1.html
@@ -71,7 +71,7 @@
           <section>
             <section class="twitter_spaces">
               <p>Join us for our 
-                <a href="https://example.com/next/twitter/space/">next Twitter Space</a> discussing new and updated packages. Or catch up by listening to 
+                <a href="https://example.com/next/twitter/space/">next Twitter Space</a> discussing new and updated packages. Or catch up with 
                 <a href="https://example.com/previous/twitter/space/">our most recent episode</a>.
               </p>
               <p class="twitter_profile">
